# foxityagent

./: .env.example  .gitignore  README.md  checklog.md  pyproject.toml  实现计划.md  用户手册.md
adb/: run.bat
data/: agent_studio.db
docs/: desktop_runtime_foundation.md
scripts/: run.ps1  setup.ps1  windows_ocr.ps1
src/agent_studio/: __init__.py  app.py
src/agent_studio/api/: __init__.py  routes.py
src/agent_studio/core/: __init__.py  config.py  models.py  state.py
src/agent_studio/services/: backend_server.py  conversation_service.py  model_router.py
src/agent_studio/services/automation/: __init__.py  controller_factory.py  input_controller.py  noop_controller.py  permission_manager.py  windows_controller.py
src/agent_studio/services/desktop/: __init__.py  runtime.py
src/agent_studio/services/perception/: __init__.py  element_locator.py  ocr_service.py  perception_service.py  screenshot_service.py
src/agent_studio/services/providers/: base.py  mock_provider.py  ollama_provider.py  openai_compatible.py
src/agent_studio/services/system/: __init__.py  (+1 more)
src/agent_studio/storage/: __init__.py  sqlite_store.py
src/agent_studio/ui/: i18n.py  internal_links.py  main_window.py  settings_dialog.py  style.qss
tests/: test_backend_server.py  test_conversation_history_api.py  test_internal_links.py  test_model_router_fallback.py  test_ocr_service.py  test_perception_routes.py  test_permission_manager.py  test_provider_health.py  test_runtime_routes.py  test_sqlite_persistence.py  test_system_service.py  test_windows_input_controller.py  test_workflow_routes.py
(+2 files in other folders)
